Nueva version grafica

--- a/home.html
+++ b/home.html
@@ -78,7 +78,7 @@
 
       <!-- Columna 3: Visualización canvas -->
       <div class="box" style="display: flex; justify-content: center; align-items: center;">
-        <canvas height="680" id="memoria"></canvas>
+        <canvas width="400" height="700" id="memoria"></canvas>
       </div>
 
     </div>
