Metodo de segmentacion

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
                     <thead>
                         <tr>
                             <th>Programa</th>
+                            <th>.STACK</th>
+                            <th>.HEAP</th>
                             <th>.TEXT</th>
                             <th>.DATA</th>
                             <th>.BSS</th>
